@@ -167,7 +167,7 @@ class Image
 	/* viewport member functions */
 
 	void reduce( fim_scale_t factor=FIM_CNS_SCALEFACTOR);
-	void magnify(fim_scale_t factor=FIM_CNS_SCALEFACTOR);
+	void magnify(fim_scale_t factor=FIM_CNS_SCALEFACTOR, fim_bool_t aes=false);
 	
 	fim_pgor_t getOrientation(void)const;
 
@@ -175,7 +175,7 @@ class Image
 	/* viewport member functions ? */
 	fim_err_t scale_increment(fim_scale_t ds);
 	fim_err_t scale_multiply (fim_scale_t sm);
-	fim_scale_t ascale()const{ return (ascale_>0.0?ascale_:1.0); }
+	fim_scale_t ascale(void)const{ return (ascale_>0.0?ascale_:1.0); }
 	void shred(void);
 	bool negate (void);/* let's read e-books by consuming less power :) */
 	bool identity (void);/* let's read e-books by consuming less power :) */
